...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_plans_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...

    <TextView
        android:id="@+id/greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Morning"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circle1"
        app:layout_constraintBaseline_toBottomOf="@id/circle1"
        app:layout_constraintTop_toTopOf="parent"
...

    <TextView
        android:id="@+id/afternoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Afternoon"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circle2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="@id/circle2"
...

    <TextView
        android:id="@+id/evening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Evening"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circle3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="@id/circle3"
...

    <View
        android:id="@+id/divider1A"
        android:layout_width="6dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/divider1B"
        app:layout_constraintTop_toBottomOf="@id/circle1"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/divider1C"
        app:layout_constraintTop_toBottomOf="@id/divider1A"
        app:layout_constraintStart_toStartOf="parent"
...

    <View
        android:id="@+id/divider2A"
        android:layout_width="6dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/divider2B"
        app:layout_constraintTop_toBottomOf="@id/circle2"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/divider2C"
        app:layout_constraintTop_toBottomOf="@id/divider2A"
        app:layout_constraintStart_toStartOf="parent"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/activity1"
        android:layout_width="230dp"
        android:layout_height="60dp"
...

        <ImageView
            android:id="@+id/activity1Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
...

        <TextView
            android:id="@+id/activity1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/activity2"
        android:layout_width="230dp"
        android:layout_height="60dp"
...

        <ImageView
            android:id="@+id/activity2Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/activity3"
        android:layout_width="230dp"
        android:layout_height="60dp"
...

        <ImageView
            android:id="@+id/activity3Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
...
